# ros2-web-bridge

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  app.py
docker/: .env  docker-compose.yml  ros2.dev.Dockerfile
frontend/: .dockerignore  index.html  nginx.conf
ros_ws/: .gitignore  ros2.dev.Dockerfile
ros_ws/src/py_basics/: package.xml  setup.py
ros_ws/src/py_basics/launch/: mvp.launch.py
ros_ws/src/py_basics/py_basics/: BRIDGE_DOC.md  bridge.py  package.xml  talker.py
ros_ws/src/py_basics/resource/: py_basics
