<?xml version="1.0"?>
<package format="3">
  <name>py_basics</name>
  <version>0.0.1</version>
  <description>Minimal talker + bridge (Flask) package</description>
  <maintainer url="https://github.com/liya-oz">Liya</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-flask</exec_depend>
</package>
